Bug 132660 - Shortcuts for ratings do not work as of 0.9.x beta
Summary: Shortcuts for ratings do not work as of 0.9.x beta
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Usability-Keyboard (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-08-19 22:36 UTC by Goran Zec
Modified: 2017-08-02 17:40 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Goran Zec 2006-08-19 22:36:01 UTC
Version:           0.9.0_beta1 (using KDE KDE 3.5.3)
Installed from:    Gentoo Packages
OS:                Linux

In 0.9.0 beta1, any shorcuts I assign for rating images have no effect whatsoever. Setting the rating from context menu works, however.
Comment 1 Goran Zec 2006-08-19 22:50:29 UTC
Sorry, "no effect whatsoever" was wrong. It's just that the effect is not visible until you leave that particular thumbnail. Still a step back from 0.8.x behavior.
Comment 2 Goran Zec 2006-08-19 22:54:05 UTC
Weird - the rating shortcuts seem to work only if I've opened the Comments/Tags sidebar before using them.
Comment 3 Goran Zec 2006-08-19 23:08:28 UTC
...and after rating a few photos in this way, my system gets mangled in horrible ways. Constant disk I/O, KDE dies in pain.
Comment 4 Marcel Wiesweg 2006-08-20 23:14:49 UTC
I can confirm this.
I will debug this further in a few days.
Comment 5 Marcel Wiesweg 2006-08-24 21:57:21 UTC
SVN commit 576788 by mwiesweg:

- for main view shortcuts, use assignRating slots from AlbumIconView,
  which assigns directly (right side bar does not)
- give shortcuts for rating clearer names so that they can be
  identified in the shortcuts dialog

BUG: 132660


 M  +6 -6      digikam/digikamapp.cpp  
 M  +7 -7      digikam/digikamview.cpp  
 M  +6 -6      utilities/imageeditor/editor/imagewindow.cpp  


--- trunk/extragear/graphics/digikam/digikam/digikamapp.cpp #576787:576788
@@ -692,22 +692,22 @@
 
     // -- Rating actions ---------------------------------------------------------------
 
-    m_0Star = new KAction(i18n("No Star"), CTRL+Key_0,
+    m_0Star = new KAction(i18n("Assign Rating \"No Star\""), CTRL+Key_0,
                           mView, SLOT(slotAssignRatingNoStar()),
                           actionCollection(), "imageview_ratenostar");
-    m_1Star = new KAction(i18n("One Star"), CTRL+Key_1,
+    m_1Star = new KAction(i18n("Assign Rating \"One Star\""), CTRL+Key_1,
                           mView, SLOT(slotAssignRatingOneStar()),
                           actionCollection(), "imageview_rateonestar");
-    m_2Star = new KAction(i18n("Two Star"), CTRL+Key_2, 
+    m_2Star = new KAction(i18n("Assign Rating \"Two Stars\""), CTRL+Key_2, 
                           mView, SLOT(slotAssignRatingTwoStar()),
                           actionCollection(), "imageview_ratetwostar");
-    m_3Star = new KAction(i18n("Three Star"), CTRL+Key_3, 
+    m_3Star = new KAction(i18n("Assign Rating \"Three Stars\""), CTRL+Key_3, 
                           mView, SLOT(slotAssignRatingThreeStar()),
                           actionCollection(), "imageview_ratethreestar");
-    m_4Star = new KAction(i18n("Four Star"), CTRL+Key_4, 
+    m_4Star = new KAction(i18n("Assign Rating \"Four Stars\""), CTRL+Key_4, 
                           mView, SLOT(slotAssignRatingFourStar()),
                           actionCollection(), "imageview_ratefourstar");
-    m_5Star = new KAction(i18n("Five Star"), CTRL+Key_5, 
+    m_5Star = new KAction(i18n("Assign Rating \"Five Stars\""), CTRL+Key_5, 
                           mView, SLOT(slotAssignRatingFiveStar()),
                           actionCollection(), "imageview_ratefivestar");
 
--- trunk/extragear/graphics/digikam/digikam/digikamview.cpp #576787:576788
@@ -916,37 +916,37 @@
 
 void DigikamView::slotAssignRating(int rating)
 {
-    d->rightSideBar->slotAssignRating(rating);
+    d->iconView->slotAssignRating(rating);
 }
 
 void DigikamView::slotAssignRatingNoStar()
 {
-    d->rightSideBar->slotAssignRating(0);
+    d->iconView->slotAssignRating(0);
 }
 
 void DigikamView::slotAssignRatingOneStar()
 {
-    d->rightSideBar->slotAssignRating(1);
+    d->iconView->slotAssignRating(1);
 }
 
 void DigikamView::slotAssignRatingTwoStar()
 {
-    d->rightSideBar->slotAssignRating(2);
+    d->iconView->slotAssignRating(2);
 }
 
 void DigikamView::slotAssignRatingThreeStar()
 {
-    d->rightSideBar->slotAssignRating(3);
+    d->iconView->slotAssignRating(3);
 }
 
 void DigikamView::slotAssignRatingFourStar()
 {
-    d->rightSideBar->slotAssignRating(4);
+    d->iconView->slotAssignRating(4);
 }
 
 void DigikamView::slotAssignRatingFiveStar()
 {
-    d->rightSideBar->slotAssignRating(5);
+    d->iconView->slotAssignRating(5);
 }
 
 }  // namespace Digikam
--- trunk/extragear/graphics/digikam/utilities/imageeditor/editor/imagewindow.cpp #576787:576788
@@ -228,22 +228,22 @@
 
     // -- Rating actions ---------------------------------------------------------------
 
-    m_0Star = new KAction(i18n("No Star"), CTRL+Key_0,
+    m_0Star = new KAction(i18n("Assign Rating \"No Star\""), CTRL+Key_0,
                           m_rightSidebar, SLOT(slotAssignRatingNoStar()),
                           actionCollection(), "imageview_ratenostar");
-    m_1Star = new KAction(i18n("One Star"), CTRL+Key_1,
+    m_1Star = new KAction(i18n("Assign Rating \"One Star\""), CTRL+Key_1,
                           m_rightSidebar, SLOT(slotAssignRatingOneStar()),
                           actionCollection(), "imageview_rateonestar");
-    m_2Star = new KAction(i18n("Two Star"), CTRL+Key_2, 
+    m_2Star = new KAction(i18n("Assign Rating \"Two Stars\""), CTRL+Key_2,
                           m_rightSidebar, SLOT(slotAssignRatingTwoStar()),
                           actionCollection(), "imageview_ratetwostar");
-    m_3Star = new KAction(i18n("Three Star"), CTRL+Key_3, 
+    m_3Star = new KAction(i18n("Assign Rating \"Three Stars\""), CTRL+Key_3,
                           m_rightSidebar, SLOT(slotAssignRatingThreeStar()),
                           actionCollection(), "imageview_ratethreestar");
-    m_4Star = new KAction(i18n("Four Star"), CTRL+Key_4, 
+    m_4Star = new KAction(i18n("Assign Rating \"Four Stars\""), CTRL+Key_4,
                           m_rightSidebar, SLOT(slotAssignRatingFourStar()),
                           actionCollection(), "imageview_ratefourstar");
-    m_5Star = new KAction(i18n("Five Star"), CTRL+Key_5, 
+    m_5Star = new KAction(i18n("Assign Rating \"Five Stars\""), CTRL+Key_5,
                           m_rightSidebar, SLOT(slotAssignRatingFiveStar()),
                           actionCollection(), "imageview_ratefivestar");