- for main view shortcuts, use assignRating slots from AlbumIconView,   which assigns directly (right side bar does not) - give shortcuts for rating clearer names so that they can be   identified in the shortcuts dialog

BUG: 132660

svn path=/trunk/extragear/graphics/digikam/; revision=576788