utilities/imageeditor/editor/imagewindow.cpp
@@ -228,22 +228,22 @@ void ImageWindow::setupActions()
 
     // -- Rating actions ---------------------------------------------------------------
 
-    m_0Star = new KAction(i18n("No Star"), CTRL+Key_0,
+    m_0Star = new KAction(i18n("Assign Rating \"No Star\""), CTRL+Key_0,
                           m_rightSidebar, SLOT(slotAssignRatingNoStar()),
                           actionCollection(), "imageview_ratenostar");
-    m_1Star = new KAction(i18n("One Star"), CTRL+Key_1,
+    m_1Star = new KAction(i18n("Assign Rating \"One Star\""), CTRL+Key_1,
                           m_rightSidebar, SLOT(slotAssignRatingOneStar()),
                           actionCollection(), "imageview_rateonestar");
-    m_2Star = new KAction(i18n("Two Star"), CTRL+Key_2, 
+    m_2Star = new KAction(i18n("Assign Rating \"Two Stars\""), CTRL+Key_2,
                           m_rightSidebar, SLOT(slotAssignRatingTwoStar()),
                           actionCollection(), "imageview_ratetwostar");
-    m_3Star = new KAction(i18n("Three Star"), CTRL+Key_3, 
+    m_3Star = new KAction(i18n("Assign Rating \"Three Stars\""), CTRL+Key_3,
                           m_rightSidebar, SLOT(slotAssignRatingThreeStar()),
                           actionCollection(), "imageview_ratethreestar");
-    m_4Star = new KAction(i18n("Four Star"), CTRL+Key_4, 
+    m_4Star = new KAction(i18n("Assign Rating \"Four Stars\""), CTRL+Key_4,
                           m_rightSidebar, SLOT(slotAssignRatingFourStar()),
                           actionCollection(), "imageview_ratefourstar");
-    m_5Star = new KAction(i18n("Five Star"), CTRL+Key_5, 
+    m_5Star = new KAction(i18n("Assign Rating \"Five Stars\""), CTRL+Key_5,
                           m_rightSidebar, SLOT(slotAssignRatingFiveStar()),
                           actionCollection(), "imageview_ratefivestar");
 
